--- a/Вконтакте/Вконтакте.html
+++ b/Вконтакте/Вконтакте.html
@@ -60,14 +60,12 @@
 		<div id="news">	
 			<a id="group"><small>Подслушано КФУ</small></a>
 			<small id="clock">час назад</small>
-			<img src="C:\Users\mansu\Desktop\Вк\images\итис.jpg" id="newsPhoto"/>
-			<img src="C:\Users\mansu\Desktop\Вк\images\лайк.png" id="like"/>
+			<img src="C:\Users\mansu\Desktop\Вконтакте\images\итис.jpg" id="newsPhoto"/>
+			<img src="C:\Users\mansu\Desktop\Вконтакте\images\лайк.png" id="like"/>
 		</div>
 		
 		<div id="spam">	
 		</div>
 		
-		<footer>
-		</footer>
 	</body>
 </html>
